feat: Added the utils module and the javafx-annotations module